--- a/CohereAnalysis.ipynb
+++ b/CohereAnalysis.ipynb
@@ -1351,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "74ad33b1",
+   "id": "0d9ae08a",
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "21b1c0fd",
+   "id": "16e6bf1c",
    "metadata": {},
    "outputs": [
     {
@@ -1916,161 +1916,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "d8afa5ee",
+   "execution_count": 133,
+   "id": "690a30db",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>emotion</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2023-11-19</th>\n",
-       "      <td>[disapproval, relief]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-20</th>\n",
-       "      <td>disappointment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-21</th>\n",
-       "      <td>confusion</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-22</th>\n",
-       "      <td>disapproval</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-23</th>\n",
-       "      <td>[disappointment, disapproval, embarrassment]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-24</th>\n",
-       "      <td>confusion</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-25</th>\n",
-       "      <td>disappointment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-26</th>\n",
-       "      <td>[admiration, curiosity, disapproval, excitemen...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-27</th>\n",
-       "      <td>[annoyance, confusion, disapproval]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-28</th>\n",
-       "      <td>[admiration, amusement, desire, embarrassment,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-29</th>\n",
-       "      <td>[curiosity, excitement]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-11-30</th>\n",
-       "      <td>curiosity</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-1</th>\n",
-       "      <td>[annoyance, disapproval]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-2</th>\n",
-       "      <td>[approval, desire, disappointment, neutral, pr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-3</th>\n",
-       "      <td>disappointment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-4</th>\n",
-       "      <td>disapproval</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-5</th>\n",
-       "      <td>disapproval</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-6</th>\n",
-       "      <td>disapproval</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-7</th>\n",
-       "      <td>disappointment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-8</th>\n",
-       "      <td>[confusion, disappointment]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-9</th>\n",
-       "      <td>disapproval</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                      emotion\n",
-       "Date                                                         \n",
-       "2023-11-19                              [disapproval, relief]\n",
-       "2023-11-20                                     disappointment\n",
-       "2023-11-21                                          confusion\n",
-       "2023-11-22                                        disapproval\n",
-       "2023-11-23       [disappointment, disapproval, embarrassment]\n",
-       "2023-11-24                                          confusion\n",
-       "2023-11-25                                     disappointment\n",
-       "2023-11-26  [admiration, curiosity, disapproval, excitemen...\n",
-       "2023-11-27                [annoyance, confusion, disapproval]\n",
-       "2023-11-28  [admiration, amusement, desire, embarrassment,...\n",
-       "2023-11-29                            [curiosity, excitement]\n",
-       "2023-11-30                                          curiosity\n",
-       "2023-12-1                            [annoyance, disapproval]\n",
-       "2023-12-2   [approval, desire, disappointment, neutral, pr...\n",
-       "2023-12-3                                      disappointment\n",
-       "2023-12-4                                         disapproval\n",
-       "2023-12-5                                         disapproval\n",
-       "2023-12-6                                         disapproval\n",
-       "2023-12-7                                      disappointment\n",
-       "2023-12-8                         [confusion, disappointment]\n",
-       "2023-12-9                                         disapproval"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+----------------+\n",
+      "| Date       | emotion        |\n",
+      "|------------+----------------|\n",
+      "| 2023-11-20 | disappointment |\n",
+      "| 2023-11-25 | disappointment |\n",
+      "| 2023-11-30 | curiosity      |\n",
+      "| 2023-12-5  | disapproval    |\n",
+      "| 2023-12-9  | disapproval    |\n",
+      "+------------+----------------+\n"
+     ]
     }
    ],
    "source": [
-    "df2_new = df2.groupby('Date')['emotion'].agg(pd.Series.mode).to_frame()\n",
-    "df2_new"
+    "from tabulate import tabulate\n",
+    "dates_to_check = ['2023-11-20', '2023-11-25', '2023-11-30', '2023-12-5', '2023-12-9']\n",
+    "df2_new = df2[df2['Date'].isin(dates_to_check)].groupby('Date')['emotion'].agg(pd.Series.mode).to_frame()\n",
+    "print(tabulate(df2_new, headers = 'keys', tablefmt = 'psql'))"
    ]
   }
  ],
